--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,9 @@ dependencies {
 
     compile 'cc.cloudist.acplibrary:library:1.2.1'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    
+
+    compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.1' // for OkHttp library
+
+
 }
