--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+    // for OkHttp library
+
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -38,14 +44,15 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.4'
+    compile 'cc.cloudist.acplibrary:library:1.2.1'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-    compile 'cc.cloudist.acplibrary:library:1.2.1'
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 
-    compile 'com.facebook.stetho:stetho:1.4.1'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.4.1' // for OkHttp library
-
-
+    compile 'com.facebook.stetho:stetho-urlconnection:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
